src/QDial.h


// 
// This file has been automatically generated by RaQt_maker V0.0.5.
// To modify and regenerate it, see the source code available here: 
//         https://github.com/yguillemot/RaQt_maker
// 

#include <stdint.h>
#include <QtWidgets>
#include "externc.h"

EXTERNC void * QWQDialCtor(void * parent);
EXTERNC void * SCWQDialCtor(void * parent);
EXTERNC int8_t QWQDialwrapping(void * obj);
EXTERNC int32_t QWQDialnotchSize(void * obj);
EXTERNC void QWQDialsetNotchTarget(void * obj, double  target);
EXTERNC double QWQDialnotchTarget(void * obj);
EXTERNC int8_t QWQDialnotchesVisible(void * obj);
EXTERNC void QWQDialsetNotchesVisible(void * obj, int8_t  visible);
EXTERNC void QWQDialsetWrapping(void * obj, int8_t  on);
EXTERNC void QWvalidateCB_QDial(void *obj, int32_t objId, char *methodName);
EXTERNC void QWQDialDtor(void *);
EXTERNC void SCWQDialDtor(void *);